--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:b2bStrength
+spring.data.rest.base-path=/rest
+spring.jackson.serialization.INDENT_OUTPUT=true
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.address = 0.0.0.0
